[project]
name = "pyday2025-llm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "polyrand", email = "37962604+polyrand@users.noreply.github.com" },
]
requires-python = ">=3.12"
dependencies = ["openai", "pydantic"]

[project.scripts]
pyday2025-llm = "pyday2025_llm:main"

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"
